# hub-gateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: build.yaml
client/: Hub.Client.csproj  Program.cs
common/: Cargo.toml
common/src/: lib.rs
connect/: Cargo.toml
connect/src/: main.rs
proto/: hub.proto
salon/: Cargo.toml
salon/src/: main.rs
server/: Cargo.toml  build.rs
server/src/: hub.rs  server.rs
