[package]
name = "hub-server"
version = "0.1.0"
authors = ["xsoheilalizadeh <xsoheilalizadeh@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
hyper-tls = "0.4.3"
log = "0.4.8"
env_logger = "0.7.1"
tonic = "0.2.1"
prost = "0.6.1"
hyper = "0.13"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros"] } 


[build-dependencies]
tonic-build = "0.2.0"
